# UMANS

./: .gitignore  AUTHORS.md  CMakeLists.txt  Doxyfile  README.md
examples/: 1to1-135Degrees-Dutra.xml  1to1-135Degrees-Karamouzas.xml  1to1-135Degrees-Moussaid.xml  1to1-135Degrees-ORCA.xml  1to1-135Degrees-PLEdestrians.xml  1to1-135Degrees-PowerLaw.xml  1to1-135Degrees-RVO.xml  1to1-135Degrees-SocialForces.xml  1to1-180Degrees-Dutra.xml  1to1-180Degrees-Karamouzas.xml  1to1-180Degrees-Moussaid.xml  1to1-180Degrees-ORCA.xml  1to1-180Degrees-PLEdestrians.xml  1to1-180Degrees-PowerLaw.xml  1to1-180Degrees-RVO.xml  1to1-180Degrees-SocialForces.xml  1to1-90Degrees-Dutra.xml  1to1-90Degrees-Karamouzas.xml  1to1-90Degrees-Moussaid.xml  1to1-90Degrees-ORCA.xml  1to1-90Degrees-PLEdestrians.xml  1to1-90Degrees-PowerLaw.xml  1to1-90Degrees-RVO.xml  1to1-90Degrees-SocialForces.xml  1to10-180Degrees-Dutra.xml  1to10-180Degrees-Karamouzas.xml  1to10-180Degrees-Moussaid.xml  1to10-180Degrees-ORCA.xml  1to10-180Degrees-PLEdestrians.xml  1to10-180Degrees-PowerLaw.xml  1to10-180Degrees-RVO.xml  1to10-180Degrees-SocialForces.xml  1to10-45Degrees-Dutra.xml  1to10-45Degrees-Karamouzas.xml  1to10-45Degrees-Moussaid.xml  1to10-45Degrees-ORCA.xml  1to10-45Degrees-PLEdestrians.xml  1to10-45Degrees-PowerLaw.xml  1to10-45Degrees-RVO.xml  1to10-45Degrees-SocialForces.xml  (+89 more)
examples/agents/: 100to100-180Degrees.xml  1to1-135Degrees.xml  1to1-180Degrees.xml  1to1-90Degrees.xml  1to10-180Degrees.xml  1to10-45Degrees.xml  1to10-90Degrees.xml  25to25-180Degrees.xml  25to25-90Degrees.xml  25to25-Formation-90Degrees.xml  50to50-Formation-180Degrees.xml  Circle10.xml  Circle15.xml  Circle25.xml  Circle5.xml  Circle50.xml  OneWayFlow100.xml  OneWayFlow200.xml
examples/obstacles/: Block.xml  Boundary.xml  Corridor.xml  FourBlocks.xml
examples/policies/: Dutra.xml  FOEAvoidance.xml  Karamouzas.xml  Moussaid.xml  ORCA.xml  PLEdestrians.xml  Paris.xml  PowerLaw.xml  RVO.xml  SocialForces.xml  VanToll.xml
src/ConsoleApplication/: main.cpp
src/Engine/CostFunctions/: FOEAvoidance.cpp  FOEAvoidance.h  ForceBasedFunction.cpp  ForceBasedFunction.h  GenericCost.cpp  GenericCost.h  GoalReachingForce.cpp  GoalReachingForce.h  Karamouzas.cpp  Karamouzas.h  Moussaid.cpp  Moussaid.h  ORCA.cpp  ORCA.h  ObjectInteractionForces.cpp  ObjectInteractionForces.h  PLEdestrians.cpp  PLEdestrians.h  Paris.cpp  Paris.h  PowerLaw.cpp  PowerLaw.h  RVO.cpp  RVO.h  RandomFunction.cpp  RandomFunction.h  SocialForcesAvoidance.cpp  SocialForcesAvoidance.h  TtcaDca.cpp  TtcaDca.h  VanToll.cpp  VanToll.h
src/Engine/core/: AgentKDTree.cpp  AgentKDTree.h  agent.cpp  agent.h  costFunction.cpp  costFunction.h  costFunctionFactory.cpp  costFunctionFactory.h  costFunctionParameters.cpp  costFunctionParameters.h  crowdSimulator.cpp  crowdSimulator.h  policy.cpp  policy.h  worldBase.cpp  worldBase.h  worldInfinite.cpp  worldInfinite.h  worldToric.cpp  worldToric.h
src/Engine/tools/: Color.h  HelperFunctions.cpp  HelperFunctions.h  Matrix.h  Polygon2D.cpp  Polygon2D.h  csvwriter.cpp  csvwriter.h  localsearch.cpp  localsearch.h  vector2D.h
src/GUI/: UMANSOpenGLWidget.cpp  UMANSOpenGLWidget.h  UMANSQtGuiApplication.cpp  UMANSQtGuiApplication.h  UMANSQtGuiApplication.qrc  UMANSQtGuiApplication.ui  VisualizationData.h  main.cpp
test/: ConfigGenerator.py  Dispositioner.py  Generator.py  TestLocalSearch.cpp
